--- a/VeloTours/Views/Ride/RidesTablePart.cshtml
+++ b/VeloTours/Views/Ride/RidesTablePart.cshtml
@@ -1,11 +1,11 @@
-﻿@model VeloTours.ViewModels.SegmentAreaViewModel
+﻿@model VeloTours.ViewModels.RideViewModel
 @using System.Collections;
 @using VeloTours.Helpers;
 @using VeloTours.Models.Extensions;
 
 @{
     int athleteID = ViewBag.Athlete;
-    var segmentList = @Model.Segments;
+    string rideListType = ViewBag.RideListType;
 }
 
 <table id="SegmentsTable" class="hidden-phone table-striped table-bordered table-condensed" style="table-layout: fixed; overflow: hidden;">
@@ -29,17 +29,20 @@
         </tr>
     </thead>
     <tbody>
-        @foreach (var item in Model.Segments)
+        @foreach (var item in Model.RideList)
         {
             string segmentName = item.Info.Name;
             <tr>
                 <td class="r">@item.Athlete.Position</td>
                 <td class="r">@item.Athlete.PositionPercentageF</td>
                 <td class="t" style="padding-left: 2px">
-                    @Html.Raw(String.Format("<a id='segment{0}' data-effortid='{1}' data-segmentid='{0}' data-komid='{2}' class='segmentLink' href='#' rel='popover' data-original-title=''><i class='icon-info-sign'></i></a>",
-                        item.Segment.SegmentID, 0, 0))
+                    @if (rideListType.Equals("segment"))
+                    {
+                        @Html.Raw(String.Format("<a id='segment{0}' data-effortid='{1}' data-segmentid='{0}' data-komid='{2}' class='segmentLink' href='#' rel='popover' data-original-title=''><i class='icon-info-sign'></i></a>",
+                            item.RideID, 0, 0))
+                    }
 
-                    @Html.ActionLink(segmentName, "Index", "Segment", routeValues: new { athlete = athleteID, segment = item.Segment.SegmentID, }, htmlAttributes: null)
+                    @Html.ActionLink(segmentName, "Index", rideListType, routeValues: new { athlete = athleteID, segment = item.RideID, area = item.RideID }, htmlAttributes: null)
                 </td>
                 <td class="r">@item.Info.DistanceInKm</td>
                 <td class="r">@Math.Round(@item.Info.ElevationGain ?? 0)</td>
