--- a/VeloTours/Views/Shared/_Layout.cshtml
+++ b/VeloTours/Views/Shared/_Layout.cshtml
@@ -4,7 +4,8 @@
 <html lang="en">
 <head>
     <meta charset="utf-8" />
-    <title>@ViewBag.Title - VeloTours</title>
+    @*<title>@ViewBag.Title - VeloTours</title>*@
+    <title>King of KOMs</title>
     <link href="~/favicon.ico" rel="shortcut icon" type="image/x-icon" />
     <meta name="viewport" content="width=device-width" />
     @Styles.Render("~/Content/css")
