--- a/VeloTours/Views/Ride/LeaderboardPart.cshtml
+++ b/VeloTours/Views/Ride/LeaderboardPart.cshtml
@@ -55,8 +55,8 @@
                 @Html.ActionLink(lb.Athlete.Name, "Index", GetRoutes(lb.AthleteID))
             </td>
             <td class="r">@lb.Yellow</td>
-            <td class="r">@lb.GreenPoints</td>
-            <td class="r">@lb.PolkaDotPoints</td>
+            <td class="r">@lb.GreenPointsF</td>
+            <td class="r">@lb.PolkaDotPointsF</td>
             <td class="r">@lb.NoRidden</td>
             <td class="r">@lb.Min</td>
             <td class="r">@lb.Percentile90</td>
